--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -13,7 +13,7 @@
         left: 0;
         top: -20%;
         max-width: 100vw;
-        padding: 30px;
+        padding: 20px;
     }
 
     .conteudo .nome_personagem {
@@ -44,21 +44,28 @@
     .conteudo .logo {
         width: 170px;
         height: 130px;
+        align-self: flex-start;
     }
 
     .conteudo {
-        top: -20%;
+        top: -15%;
+    }
+
+    .imagem {
+        display: none;
+    }
+
+    .container_responsivo {
+        display: block;
+        max-width: 100%;
     }
 
     .conteudo .nome_personagem {
-        font-size: 24px;
-    }
-
-    .botoes {
-        padding: 20px;
+        font-size: 26px;
     }
 
     .botoes .botao img {
-        max-width: 50px;
+        max-width: 100%;
     }
+
 }
